# metody_numeryczne

./: README.md  meson.build  meson_options.txt
example/: gauss_quadrature_example01.cpp  lagrange_polynomial_example01.cpp  meson.build  newton_cotes_example01.cpp  roots_example01.cpp  simpson_example01.cpp  uncertainties_example01.cpp
example/data/: a.txt  d.txt  h1.txt  h3.txt  h5.txt  x10h1.txt  x10h2.txt  x10h3.txt  x10h4.txt  x10h5.txt  x5h1.txt
example/differential/: differentiation_example01.cpp  meson.build
example/integrals/: gauss_quadrature_example01.cpp  meson.build  newton_cotes_example01.cpp  simpson_example01.cpp
example/interpolations/: lagrange_polynomial_example01.cpp  meson.build
example/root_finding/: meson.build  roots_example01.cpp
example/statistics/: distributions_example01.cpp  meson.build  uncertainties_example01.cpp
gauss_quadrature/: main.cpp
include/differential/: derivatives.hpp
include/integrals/: gauss_quadrature.hpp  newton_cotes.hpp  simpson.hpp  utils.hpp
include/interpolations/: lagrange_polynomial.hpp
include/jr_numeric/algebra/: matrix.hpp  vectors.hpp
include/jr_numeric/differential/: derivatives.hpp
include/jr_numeric/integrals/: gauss_quadrature.hpp  newton_cotes.hpp  simpson.hpp  utils.hpp
include/jr_numeric/interpolations/: lagrange_polynomial.hpp
include/jr_numeric/root_finding/: roots.hpp
include/jr_numeric/statistics/: distributions.hpp  uncertainties.hpp  utils.hpp
include/jr_numeric/utils/: concepts.hpp  meta.hpp  utils.hpp
include/root_finding/: roots.hpp
include/statistics/: uncertainties.hpp
lagrange_polynomial/: main.cpp
meson/: install.sh
src/gauss_quadrature/: gauss_quadrature.hpp
src/lagrange_polynomial/: lagrange_polynomial.hpp  test01.in
src/newton_cotes/: newton_cotes.hpp
src/roots/: roots.hpp
src/simpson/: simpson.hpp
src/uncertainties/: uncertainties.hpp
src/utils/: utils.hpp
uncertainties/: a.out  main  main.cpp
uncertainties/data/: h2.txt  h4.txt  x1h1.txt  x2h1.txt
