sciplot_dep = dependency('sciplot')

uncertainties_example01=executable(
    'uncertainties_example01',
    'uncertainties_example01.cpp',
    cpp_args: cpp_build_args,
	link_args: cpp_link_args,
    dependencies: [numeric_lib_dep, sciplot_dep],
)

lagrange_polynomial_example01=executable(
    'lagrange_polynomial_example01',
    'lagrange_polynomial_example01.cpp',
    cpp_args: cpp_build_args,
	link_args: cpp_link_args,
    dependencies: [numeric_lib_dep],
)

gauss_quadrature_example01=executable(
    'gauss_quadrature_example01',
    'gauss_quadrature_example01.cpp',
    cpp_args: cpp_build_args,
	link_args: cpp_link_args,
    dependencies: [numeric_lib_dep],
)
